--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "@fullcalendar/timegrid": "6.1.6",
     "@hookform/resolvers": "3.1.0",
     "@iconify/react": "4.1.0",
-    "@mui/icons-material": "^7.2.0",
-    "@mui/lab": "5.0.0-alpha.128",
-    "@mui/material": "5.12.2",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/lab": "^5.0.0-alpha.128",
+    "@mui/material": "^5.15.20",
     "@mui/system": "5.12.1",
-    "@mui/x-data-grid": "6.0.3",
+    "@mui/x-data-grid": "^5.17.0",
     "@popperjs/core": "2.11.7",
     "@reduxjs/toolkit": "1.9.5",
     "apexcharts-clevision": "3.28.5",
